--- a/cases/Warehouse Performance Transformation.html
+++ b/cases/Warehouse Performance Transformation.html
@@ -3,115 +3,145 @@
 <head>
 <meta charset="UTF-8" />
 <title>Warehouse Operational Excellence – Lean Six Sigma Case</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
-:root{
-  --bg:#0f172a;
-  --panel:#ffffff;
-  --blue:#2563eb;
-  --green:#16a34a;
-  --gray:#64748b;
+:root {
+  --green:#1fa971;
+  --blue:#2f6fed;
+  --dark:#0f172a;
+  --muted:#64748b;
+  --bg:#f8fafc;
 }
 
-body{
+* { box-sizing:border-box; }
+
+body {
   margin:0;
-  font-family: Inter, system-ui;
-  background:#f8fafc;
+  font-family: Inter, system-ui, sans-serif;
+  background:var(--bg);
   color:#0f172a;
 }
 
 /* HEADER */
-header{
-  background:var(--bg);
-  color:white;
-  padding:20px 60px;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-}
 
-header a{
-  color:white;
-  text-decoration:none;
-  font-weight:600;
-}
-
-.back{
-  display:flex;
-  gap:10px;
-  align-items:center;
-}
-
-.lang-toggle button{
-  background:none;
-  border:1px solid white;
-  color:white;
-  padding:6px 14px;
-  border-radius:6px;
-  cursor:pointer;
-}
-
-/* LAYOUT */
-.container{
-  max-width:1200px;
-  margin:60px auto;
-  padding:0 30px;
-}
-
-.section{
-  margin-bottom:80px;
-}
-
-.card{
+header {
   background:white;
-  border-radius:16px;
-  padding:40px;
-  box-shadow:0 20px 40px rgba(0,0,0,0.05);
+  padding:18px 48px;
+  border-bottom:1px solid #e5e7eb;
+  display:flex;
+  align-items:center;
+  gap:16px;
 }
 
-h1{
+.back {
+  font-size:20px;
+  text-decoration:none;
+  color:var(--green);
+  font-weight:700;
+}
+
+.brand {
+  font-weight:700;
+  font-size:20px;
+}
+
+/* SECTIONS */
+
+.container {
+  max-width:1200px;
+  margin:64px auto;
+  padding:0 32px;
+}
+
+h1 {
   font-size:48px;
+  margin-bottom:12px;
 }
 
-h2{
-  margin-bottom:20px;
+.subtitle {
+  color:var(--muted);
+  max-width:700px;
+  font-size:18px;
 }
 
-.grid-3{
+/* KPI GRID */
+
+.kpis {
   display:grid;
-  grid-template-columns:repeat(3,1fr);
-  gap:24px;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:20px;
+  margin:56px 0;
 }
 
-/* KPI */
-.kpi{
-  text-align:center;
+.kpi {
+  background:white;
+  padding:28px;
+  border-radius:18px;
+  box-shadow:0 6px 18px rgba(0,0,0,.05);
 }
 
-.kpi strong{
-  font-size:44px;
+.kpi span {
+  font-size:34px;
+  font-weight:800;
   color:var(--green);
 }
 
-/* BUTTON */
-.cta{
-  display:inline-block;
+.kpi p {
+  margin:6px 0 0;
+  color:var(--muted);
+}
+
+/* CARD */
+
+.card {
+  background:white;
+  padding:56px;
+  border-radius:28px;
+  margin:64px 0;
+  box-shadow:0 12px 30px rgba(0,0,0,.05);
+}
+
+h2 {
+  font-size:34px;
+  margin-bottom:16px;
+}
+
+h3 {
   margin-top:40px;
-  background:var(--green);
-  color:white;
-  padding:18px 34px;
-  border-radius:12px;
-  text-decoration:none;
-  font-weight:600;
+}
+
+.grid-2 {
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(320px,1fr));
+  gap:48px;
+}
+
+/* CHARTS */
+
+.chart-box {
+  background:#f1f5f9;
+  padding:28px;
+  border-radius:18px;
 }
 
 /* FOOTER */
-footer{
+
+footer {
   text-align:center;
-  padding:60px;
+  padding:80px 0;
+}
+
+.back-btn {
+  display:inline-block;
+  background:var(--green);
+  color:white;
+  padding:16px 36px;
+  border-radius:40px;
+  text-decoration:none;
+  font-weight:700;
 }
 </style>
 </head>
@@ -119,176 +149,202 @@ footer{
 <body>
 
 <header>
-  <div class="back">
-    <a href="https://ozgunbatu.github.io/projects/">⬅ Back to Portfolio</a>
-  </div>
-  <div class="lang-toggle">
-    <button onclick="switchLang('en')">EN</button>
-    <button onclick="switchLang('de')">DE</button>
-  </div>
+  <a class="back" href="https://ozgunbatu.github.io/projects/">←</a>
+  <div class="brand">Batuhan Doğan</div>
 </header>
 
 <div class="container">
 
-<!-- HERO -->
-<section class="section">
-<div class="card">
-<h1 data-en="Warehouse Operational Excellence Program"
-    data-de="Operational-Excellence-Programm im Warehouse">
-Warehouse Operational Excellence Program</h1>
-
-<p data-en="A Lean Six Sigma case study to reduce lead time, increase picking accuracy and improve dock-to-stock performance in a high-volume distribution center."
-   data-de="Eine Lean-Six-Sigma-Fallstudie zur Reduzierung der Durchlaufzeit, Verbesserung der Kommissioniergenauigkeit und Optimierung der Dock-to-Stock-Performance.">
-A Lean Six Sigma case study...
+<h1>Warehouse Operational Excellence</h1>
+<p class="subtitle">
+Lean Six Sigma transformation of a large omnichannel distribution center focused on
+lead-time reduction, quality improvement and labor productivity.
 </p>
-</div>
-</section>
-
-<!-- PROBLEM -->
-<section class="section">
-<div class="card">
-<h2>1. Business Problem</h2>
-<ul>
-<li>High order fulfillment lead time</li>
-<li>Picking error rate above industry benchmark</li>
-<li>Congestion in inbound docks</li>
-<li>Low labor productivity</li>
-</ul>
-</div>
-</section>
 
 <!-- KPI -->
-<section class="section">
-<div class="grid-3">
-<div class="card kpi"><strong id="kpi1">0%</strong><p>Lead Time Reduction</p></div>
-<div class="card kpi"><strong id="kpi2">0%</strong><p>Error Rate Improvement</p></div>
-<div class="card kpi"><strong id="kpi3">0%</strong><p>Productivity Increase</p></div>
+
+<div class="kpis">
+  <div class="kpi"><span>-32%</span><p>Order Lead Time</p></div>
+  <div class="kpi"><span>+28%</span><p>UPH Productivity</p></div>
+  <div class="kpi"><span>-45%</span><p>Picking Errors</p></div>
+  <div class="kpi"><span>€1.5M</span><p>Annual Savings</p></div>
 </div>
-</section>
+
+<!-- CONTEXT -->
+
+<div class="card">
+<h2>Operating Context</h2>
+
+<p>
+The facility is a 45,000 m² omnichannel distribution center serving both B2C and B2B flows.
+It processes more than 42,000 order lines per day across 18,000 SKUs with semi-automated
+picking and three operational shifts.
+</p>
+
+<h3>Value Stream</h3>
+<p>
+Inbound → Quality Check → Put-Away → Storage → Replenishment → Picking → Packing → Sortation → Shipping
+</p>
+
+</div>
+
+<!-- PROBLEM -->
+
+<div class="card">
+<h2>Business Problem</h2>
+
+<p>
+During peak seasons the site experienced growing backlogs, overtime costs and declining
+customer satisfaction. Executive management launched a Lean Six Sigma initiative to
+restore service level while controlling cost.
+</p>
+
+<ul>
+<li>Order Lead Time: 19.4h vs 12h target</li>
+<li>Picking Accuracy: 97.8%</li>
+<li>Dock-to-Stock: 9.2h</li>
+<li>Overtime cost +22%</li>
+</ul>
+</div>
 
 <!-- DATA -->
-<section class="section">
+
 <div class="card">
-<h2>2. Data & Sources</h2>
-<p>
-Operational logs, WMS exports, labor tracking systems and public benchmarks:
-</p>
+<h2>Data & Measurement</h2>
+
+<div class="grid-2">
+<div>
+<h3>Sources</h3>
 <ul>
-<li><a href="https://www.kaggle.com/datasets">Kaggle Supply Chain Datasets</a></li>
-<li><a href="https://www.mhlnews.com/">MHI Industry Reports</a></li>
-<li><a href="https://www.apics.org/">APICS Benchmarks</a></li>
+<li>WMS timestamps</li>
+<li>Scan logs</li>
+<li>Labor system</li>
+<li>Dock scheduling</li>
 </ul>
 </div>
-</section>
+
+<div>
+<h3>Sample</h3>
+<ul>
+<li>6 weeks history</li>
+<li>3.2M pick lines</li>
+<li>14,500 pallets inbound</li>
+</ul>
+</div>
+</div>
+
+</div>
 
 <!-- ANALYSIS -->
-<section class="section">
-<div class="card">
-<h2>3. Lean Six Sigma Analysis</h2>
 
+<div class="card">
+<h2>Root Cause Analysis</h2>
+
+<div class="grid-2">
+
+<div class="chart-box">
+<h3>Pareto – Error Drivers</h3>
 <canvas id="pareto"></canvas>
-<br>
-<canvas id="spc"></canvas>
-<br>
-<canvas id="beforeAfter"></canvas>
 </div>
-</section>
 
-<!-- SOLUTION -->
-<section class="section">
-<div class="card">
-<h2>4. Improvement Initiatives</h2>
-<ul>
-<li>Slotting optimization & ABC analysis</li>
-<li>Kanban replenishment loops</li>
-<li>Standardized work instructions</li>
-<li>Dock scheduling algorithm</li>
-<li>Poka-Yoke barcode validation</li>
-</ul>
+<div class="chart-box">
+<h3>Dock-to-Stock SPC</h3>
+<canvas id="spc"></canvas>
 </div>
-</section>
+
+<div class="chart-box">
+<h3>Simulation Impact</h3>
+<canvas id="sim"></canvas>
+</div>
+
+<div class="chart-box">
+<h3>Labor Utilization</h3>
+<canvas id="labor"></canvas>
+</div>
+
+</div>
+
+</div>
+
+<!-- IMPROVE -->
+
+<div class="card">
+<h2>Improvement Initiatives</h2>
+
+<ul>
+<li>Slotting redesign and fast-mover relocation</li>
+<li>Pick-to-light pilot in small-parts zone</li>
+<li>Dock appointment leveling</li>
+<li>Poka-Yoke scanning & weight checks</li>
+<li>Standard work sheets and skill matrix</li>
+</ul>
+
+</div>
 
 <!-- IMPACT -->
-<section class="section">
-<div class="card">
-<h2>5. Results</h2>
-<p>
-Simulation and pilot rollout indicated significant operational improvements.
-</p>
-</div>
-</section>
 
-<!-- ROADMAP -->
-<section class="section">
 <div class="card">
-<h2>6. Implementation Roadmap</h2>
-<ol>
-<li>Pilot zone rollout</li>
-<li>Kaizen workshops</li>
-<li>Control charts dashboard</li>
-<li>WMS integration</li>
-</ol>
+<h2>Business Impact</h2>
 
-<a class="cta" href="https://ozgunbatu.github.io/projects/">Back to Portfolio</a>
+<ul>
+<li>Overtime reduced by €0.9M/year</li>
+<li>Rework cost −55%</li>
+<li>Throughput +18%</li>
+<li>Customer complaints −34%</li>
+</ul>
+
 </div>
-</section>
 
 </div>
 
 <footer>
-© 2026 Batuhan Dogan – Industrial Engineering Portfolio
+<a class="back-btn" href="https://ozgunbatu.github.io/projects/">← Back to Portfolio</a>
 </footer>
 
 <script>
-/* KPI Animation */
-function animate(id, end){
-  let val=0;
-  const el=document.getElementById(id);
-  const interval=setInterval(()=>{
-    val++;
-    el.innerText=val+"%";
-    if(val===end) clearInterval(interval);
-  },25);
-}
-animate("kpi1",32);
-animate("kpi2",45);
-animate("kpi3",28);
-
-/* Charts */
 
 new Chart(pareto,{
- type:"bar",
+ type:'bar',
  data:{
-  labels:["Picking","Congestion","Rework","Travel","Waiting"],
-  datasets:[{data:[42,26,14,10,8]}]
+  labels:['Zone A','Mis-slotting','Packaging','Training','System'],
+  datasets:[{
+   data:[42,26,14,10,8],
+   backgroundColor:'#2f6fed'
+  }]
  }
 });
 
 new Chart(spc,{
- type:"line",
+ type:'line',
  data:{
-  labels:["W1","W2","W3","W4","W5","W6"],
-  datasets:[{data:[18,19,17,15,14,13]}]
+  labels:['W1','W2','W3','W4','W5','W6'],
+  datasets:[{
+   data:[9.5,10.2,8.9,7.1,6.8,6.2],
+   borderColor:'#2f6fed'
+  }]
  }
 });
 
-new Chart(beforeAfter,{
- type:"bar",
+new Chart(sim,{
+ type:'bar',
  data:{
-  labels:["Lead Time","Errors","UPH"],
+  labels:['Lead Time','Errors','UPH'],
   datasets:[
-   {label:"Before",data:[100,100,100]},
-   {label:"After",data:[68,55,128]}
+   {data:[0,-32,-28],backgroundColor:'#1fa971'}
   ]
  }
 });
 
-/* Language toggle */
-function switchLang(lang){
- document.querySelectorAll("[data-en]").forEach(el=>{
-  el.innerText = el.dataset[lang];
- });
-}
+new Chart(labor,{
+ type:'line',
+ data:{
+  labels:['Mon','Tue','Wed','Thu','Fri'],
+  datasets:[
+   {data:[68,71,75,82,85],borderColor:'#2f6fed'}
+  ]
+ }
+});
+
 </script>
 
 </body>
