Add Open Graph and Twitter meta tags to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ÖZGÜN BATUHAN DOGAN // STRATEGIC PORTFOLIO</title>
+    <!-- ================= LINKEDIN FEATURED / SOCIAL THUMBNAIL ================= -->
+
+<meta property="og:title" content="Özgün Batuhan Doğan – Strategic Portfolio" />
+<meta property="og:description" content="Strategic Analyst with 5+ years of experience in Product Management, Data Analytics, Marketing and Business Development. Seeking Werkstudent, Junior and Graduate roles in Munich." />
+<meta property="og:image" content="https://ozgunbatu.github.io/portfolio/portfolio-thumbnail.png" />
+<meta property="og:url" content="https://ozgunbatu.github.io/portfolio/" />
+<meta property="og:type" content="website" />
+
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Özgün Batuhan Doğan – Strategic Portfolio" />
+<meta name="twitter:description" content="Product • Data • Growth | Munich" />
+<meta name="twitter:image" content="https://ozgunbatu.github.io/portfolio/portfolio-thumbnail.png" />
+
+<!-- ================================================================ -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&family=Space+Mono:wght@400;700&display=swap');
         
