Add JSON action for image generation in index.html

--- a/index.html
+++ b/index.html
@@ -687,3 +687,5 @@
     </script>
 </body>
 </html>
+
+{ "action": "image_generation", "action_input": "{'prompt': 'A high-resolution, professional LinkedIn Featured thumbnail in PNG format. The design is brutalist: white background with thick black borders and bright red accents. Bold typography in Space Grotesk font. Text: "STRATEGIC ANALYST" in large black letters, "ÖZGÜN BATUHAN DOGAN" in a red box. Right side features icons for BMW, INFINEON, and TECH STARTUPS. Minimalist, industrial, high contrast.', 'aspect_ratio': '16:9'}" }
