--- a/index.html
+++ b/index.html
@@ -514,9 +514,9 @@
     <!-- Navigation -->
     <nav>
         <div class="nav-content">
-            <div class="logo">ÖBD//2025</div>
+            <div class="logo">OZGUN BATUHAN DOGAN // M.A BUSINESS MANAGEMENT STUDENT</div>
             <div class="nav-links">
-                <a href="#work">WORK</a>
+                <a href="#work">INDUSTRIES</a>
                 <a href="#about">ABOUT</a>
                 <a href="#contact">CONTACT</a>
             </div>
@@ -530,11 +530,11 @@
             
             <h1>
                 STRATEGIC<br>
-                <span>ANALYST</span>
+                <span>PORTFOLIO</span>
             </h1>
             
             <p class="hero-description">
-                DATA-DRIVEN DECISION MAKING // PRODUCT MANAGEMENT // MARKET STRATEGY // AUTOMOTIVE // SEMICONDUCTOR // STARTUPS
+                DATA ANALYTICS // BUSINESS DEVELOPMENT // PRODUCT MANAGEMENT // MARKETING // AUTOMOTIVE // SEMICONDUCTOR // STARTUPS
             </p>
 
             <div class="hero-stats">
@@ -547,7 +547,7 @@
                     <span class="stat-label">INDUSTRIES</span>
                 </div>
                 <div class="stat-box">
-                    <span class="stat-number">5+</span>
+                    <span class="stat-number">3+</span>
                     <span class="stat-label">YEARS EXP</span>
                 </div>
             </div>
